# OntologyGeneration

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_test.md  LICENSE  METRICS.md  README.md  explore.py  pyproject.toml
.github/workflows/: docs.yml  lint.yml
configs/: baseline.yaml
docs/source/: conf.py  index.rst
src/OntologyCreation/: __init__.py  get_dbpedia_data.py  get_wordnet_data.py  map_reduce.py  models.py  nlp.py  test.ipynb  test.py  utils.py
tests/: test_evaluate.py  test_models.py  test_nlp.py
