[project]
name = "OntologyCreation"
version = "0.1.0"
description = "Using agents in order to create an OWL ontology(mostly TBox) from unstructured or semi structured text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "logfire>=4.32.1",
    "mlflow>=3.11.1",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "owlready2>=0.50",
    "pydantic>=2.13.2",
    "pydantic-ai>=1.84.1",
    "pydantic-ai-slim[openai]>=1.84.1",
    "pyvis>=0.3.2",
    "streamlit>=1.56.0",
    "taskipy>=1.14.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/OntologyCreation"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "sphinx>=9.1.0",
]

[tool.taskipy.tasks]
get-dbpedia = "python -m OntologyCreation.get_dbpedia_data"
get-wordnet  = "python -m OntologyCreation.get_wordnet_data"
test         = "python -m OntologyCreation.test"
explore      = "streamlit run explore.py"

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
